Implement code review suggestions

--- a/client/src/app/forms/components/complex-molecular-profile-deprecate/complex-molecular-profile-deprecate.form.html
+++ b/client/src/app/forms/components/complex-molecular-profile-deprecate/complex-molecular-profile-deprecate.form.html
@@ -67,7 +67,7 @@
               <ng-template #notSignedIn>
                 <span
                   nz-tooltip
-                  nzTooltipTitle="Must be signed in and an editor to deprecate molecular Profile.">
+                  nzTooltipTitle="Must be signed in and an editor to deprecate Molecular Profile.">
                   <ng-template *ngTemplateOutlet="submitButton"></ng-template>
                 </span>
               </ng-template>
