--- a/client/src/app/forms/components/entity-tag/entity-tag.component.less
+++ b/client/src/app/forms/components/entity-tag/entity-tag.component.less
@@ -100,6 +100,10 @@ nz-tag {
       padding: 3px 2px 3px 4px;
       margin: -3px 0 -3px 0;
     }
+    .tag-no-icon {
+      display: inline-block;
+      width: 4px;
+    }
     .tag-label {
       display: inline-block;
       font-weight: normal;
