--- a/client/src/app/forms/types/variant-select/variant-quick-add/variant-quick-add.form.html
+++ b/client/src/app/forms/types/variant-select/variant-quick-add/variant-quick-add.form.html
@@ -22,14 +22,14 @@
       </nz-col>
       <nz-col nzSpan="24">
         <button
+          type="submit"
           nz-button
           nzType="primary"
-          [disabled]="!form.valid"
+          [disabled]="form.valid === false || model.name !== undefined && model.name.length < minNameLength"
           nzBlock>
           Add&nbsp;
-          <strong>{{ geneName$ | ngrxPush }}</strong> &nbsp;Variant&nbsp;<i>{{
-            searchString$ | ngrxPush
-          }}</i>
+          <strong> {{ geneName$ | ngrxPush }}</strong> &nbsp;Variant&nbsp;
+          <i> {{ searchString$ | ngrxPush }} </i>
         </button>
       </nz-col>
     </nz-row>
