--- a/client/src/app/forms/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms/types/variant-select/variant-select.type.html
@@ -115,6 +115,6 @@
     [cvcSearchString]="searchStr"
     [cvcGeneId]="onGeneId$ | ngrxPush"
     [cvcGeneName]="onGeneName$ | ngrxPush"
-    (cvcOnCreate)="onPopulate$.next($event)">
+    (cvcOnCreate)="onSelectOrCreate($event)">
   </cvc-variant-quick-add-form>
 </ng-template>
