--- a/client/src/app/views/features/features-detail/features-summary/features-summary.page.html
+++ b/client/src/app/views/features/features-detail/features-summary/features-summary.page.html
@@ -11,12 +11,12 @@
       <nz-tabset nzType="card">
         <nz-tab nzTitle="Molecular Profiles">
           <cvc-molecular-profile-menu
-            [geneId]="feature.id"></cvc-molecular-profile-menu>
+            [featureId]="feature.id"></cvc-molecular-profile-menu>
         </nz-tab>
         <nz-tab nzTitle="Variants">
           <cvc-variant-menu
-            [geneId]="feature.id"
-            [geneName]="feature.name"></cvc-variant-menu>
+            [featureId]="feature.id"
+            [featureName]="feature.name"></cvc-variant-menu>
         </nz-tab>
       </nz-tabset>
     </nz-col>
