--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -5,7 +5,7 @@
     <nz-col [nzSpan]="12">
       <!-- left col layout row -->
       <nz-row [nzGutter]="[8,8]">
-        <!-- gene attributes block -->
+        <!-- variant attributes block -->
         <nz-col nzSpan="24">
           <nz-descriptions
             nzLayout="horizontal"
@@ -143,9 +143,9 @@
             nzSize="small"
             [nzColumn]="{ xxl: 2, xl: 2, lg: 1, md: 1, sm: 1, xs: 1 }"
             nzBordered="true">
-            <!-- gene -->
-            <nz-descriptions-item nzTitle="Gene">
-              <cvc-gene-tag [gene]="variant.gene"></cvc-gene-tag>
+            <!-- feature -->
+            <nz-descriptions-item [nzTitle]="variant.feature.__typename">
+              <cvc-feature-tag [feature]="variant.feature"></cvc-feature-tag>
             </nz-descriptions-item>
 
             <!-- allele reg. id -->
