Add feature browse table

--- a/client/src/app/views/features/features-home/features-home.page.html
+++ b/client/src/app/views/features/features-home/features-home.page.html
@@ -64,7 +64,7 @@
     <nz-row>
       <nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-genes-table cvcTitle="Browse All Genes"></cvc-genes-table>
+          <cvc-features-table cvcTitle="Browse All Features"></cvc-features-table>
         </div>
       </nz-col>
     </nz-row>
