Replace Genes with Features in sidebar navigation menu

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -77,13 +77,13 @@
             nz-menu-item
             nz-tooltip
             nzTooltipPlacement="right"
-            [nzTooltipTitle]="isCollapsed ? 'Genes' : ''"
+            [nzTooltipTitle]="isCollapsed ? 'Features' : ''"
             nzSelected
             nzMatchRouter>
             <i
               nz-icon
               nzType="civic-gene"></i>
-            <span> <a routerLink="/genes">Genes</a> </span>
+            <span> <a routerLink="/features">Features</a> </span>
           </li>
 
           <li
