Update MP parsedName to use feature instead of gene

--- a/client/src/app/components/molecular-profiles/molecular-profile-variant-card/molecular-profile-variant-card.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-variant-card/molecular-profile-variant-card.component.html
@@ -12,8 +12,8 @@
                       <nz-descriptions-item [nzSpan]="2" nzTitle="Variant">
                           <cvc-variant-tag [variant]="variant"></cvc-variant-tag>
                       </nz-descriptions-item>
-                      <nz-descriptions-item [nzSpan]="2" nzTitle="Gene">
-                          <cvc-gene-tag [gene]="variant.gene"></cvc-gene-tag>
+                      <nz-descriptions-item [nzSpan]="2" nzTitle="Feature">
+                          <cvc-feature-tag [feature]="variant.feature"></cvc-feature-tag>
                       </nz-descriptions-item>
                       <!-- aliases -->
                       <nz-descriptions-item [nzSpan]="2" nzTitle="Aliases">
