Update DiseaseBrowseTable to use Feature tag pileups instead of Gene name list

--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
@@ -65,6 +65,11 @@
         [gene]="tag"
         [truncateLongName]="true"></cvc-gene-tag>
     </ng-container>
+    <ng-container *ngSwitchCase="'feature'">
+      <cvc-feature-tag
+        [feature]="tag"
+        [truncateLongName]="true"></cvc-feature-tag>
+    </ng-container>
     <ng-container *ngSwitchCase="'organization'">
       <cvc-organization-tag [org]="tag"></cvc-organization-tag>
     </ng-container>
