plain-/tag-overflow table filter matched-tag emphasis now case-insensitive

--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
@@ -3,7 +3,8 @@
     *ngFor="let tag of displayedTags"
     [ngClass]="{
       'matched-tag':
-        matchingText && tag.name.toLowerCase().includes(matchingText)
+        matchingText &&
+        tag.name.toLowerCase().includes(matchingText.toLowerCase())
     }">
     <ng-container
       [ngTemplateOutlet]="tagTemplate"
