--- a/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.html
+++ b/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.html
@@ -2,7 +2,8 @@
   <span
     *ngFor="let tag of displayedTags"
     [ngClass]="{
-      'matched-tag': matchingText && tag.toLowerCase().includes(matchingText)
+      'matched-tag':
+        matchingText && tag.toLowerCase().includes(matchingText.toLowerCase())
     }">
     <nz-tag>{{ tag }}</nz-tag>
   </span>
