--- a/client/src/app/views/features/features-detail/features-revisions/features-revisions.page.html
+++ b/client/src/app/views/features/features-detail/features-revisions/features-revisions.page.html
@@ -1,3 +1,3 @@
 <cvc-revisions-list-and-filter
-  [id]="this.geneId"
+  [id]="this.featureId"
   [entityType]="this.entityType"></cvc-revisions-list-and-filter>
