--- a/client/src/app/views/features/features-revise/features-suggest/features-suggest.page.html
+++ b/client/src/app/views/features/features-revise/features-suggest/features-suggest.page.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="geneId; else loadingGene">
-  <cvc-gene-revise-form [geneId]="geneId"> </cvc-gene-revise-form>
+<ng-container *ngIf="featureId; else loadingGene">
+  <cvc-gene-revise-form [featureId]="featureId"> </cvc-gene-revise-form>
 </ng-container>
-<ng-template #loadingGene>Loading Gene...</ng-template>
+<ng-template #loadingGene>Loading Feature...</ng-template>
