fix feature display on event feed

--- a/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
+++ b/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
@@ -66,9 +66,9 @@
     <ng-container
       *ngIf="tagDisplay != 'hideSubject' && event.subject as subject"
       [ngSwitch]="subject.__typename">
-      <cvc-gene-tag
-        *ngSwitchCase="'Gene'"
-        [gene]="subject"></cvc-gene-tag>
+      <cvc-feature-tag
+        *ngSwitchCase="'Feature'"
+        [feature]="subject"></cvc-feature-tag>
       <cvc-assertion-tag
         *ngSwitchCase="'Assertion'"
         [assertion]="subject"></cvc-assertion-tag>
