moving variants between features is working

--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -26,19 +26,19 @@
         [nzExtra]="revCardHeaderExtra"
         [nzActive]="true">
         <ng-container [ngSwitch]="revision.fieldName">
-          <ng-container *ngSwitchCase="'gene_id'">
+          <ng-container *ngSwitchCase="'feature_id'">
             <cvc-revision-list-diff
               [diffObject]="revision.linkoutData.diffValue"
-              entityType="Gene">
+              entityType="Feature">
               <ng-template
                 #itemTemplate
                 let-item>
-                <cvc-gene-tag
-                  [gene]="{
+                <cvc-feature-tag
+                  [feature]="{
                     id: item.id,
                     name: item.displayName,
                     link: item.link
-                  }"></cvc-gene-tag>
+                  }"></cvc-feature-tag>
               </ng-template>
             </cvc-revision-list-diff>
           </ng-container>
@@ -319,7 +319,9 @@
             <nz-col nzSpan="16">
               <ng-container *ngIf="revision.resolutionActivity?.parsedNote">
                 <cvc-comment-body
-                  [commentBodySegments]="revision.resolutionActivity!.parsedNote"></cvc-comment-body>
+                  [commentBodySegments]="
+                    revision.resolutionActivity!.parsedNote
+                  "></cvc-comment-body>
               </ng-container>
             </nz-col>
             <nz-col
@@ -358,9 +360,7 @@
                 *nzSpaceItem></i>
               <ng-template #creationCommentTemplate>
                 <cvc-comment-body
-                  [commentBodySegments]="
-                    revision.creationActivity!.parsedNote
-                  ">
+                  [commentBodySegments]="revision.creationActivity!.parsedNote">
                 </cvc-comment-body>
               </ng-template>
             </ng-container>
@@ -373,13 +373,15 @@
             nzSize="small"
             (click)="$event.stopPropagation()">
             <span *nzSpaceItem>
-              <ng-container *ngIf="revision.creationActivity?.user; else noRevisor">
+              <ng-container
+                *ngIf="revision.creationActivity?.user; else noRevisor">
                 <span
                   nz-typography
                   nzType="secondary"
                   >Submitted By</span
                 >
-                <cvc-user-tag [user]="revision.creationActivity!.user"></cvc-user-tag>
+                <cvc-user-tag
+                  [user]="revision.creationActivity!.user"></cvc-user-tag>
               </ng-container>
               <ng-template #noRevisor>
                 <span
@@ -421,7 +423,8 @@
                 <ng-template #loggedIn>
                   <label
                     *ngIf="
-                      viewer.isCurator && viewer.id != revision.creationActivity?.user.id;
+                      viewer.isCurator &&
+                        viewer.id != revision.creationActivity?.user.id;
                       else canRevise
                     "
                     nz-checkbox
