change instances of civic-gene icon to civic-feature icon

--- a/client/src/app/components/diseases/diseases-table/diseases-table.component.html
+++ b/client/src/app/components/diseases/diseases-table/diseases-table.component.html
@@ -71,7 +71,7 @@
           nzTooltipTitle="Feature Count">
           <i
             nz-icon
-            nzType="civic-gene"></i>
+            nzType="civic-feature"></i>
           Count
         </th>
         <th
@@ -163,9 +163,9 @@
 
             <ng-template #noDoid> -- </ng-template>
           </td>
-          <td
-            class="overflow-ellipsis">
-            <cvc-tag-overflow tagType="feature"
+          <td class="overflow-ellipsis">
+            <cvc-tag-overflow
+              tagType="feature"
               [tags]="disease.features"
               [maxDisplayCount]="5"
               [matchingText]="featureNameInput">
