--- a/client/src/app/components/features/feature-popover/feature-popover.component.html
+++ b/client/src/app/components/features/feature-popover/feature-popover.component.html
@@ -8,8 +8,8 @@
         <i
           nz-icon
           nzTheme="twotone"
-          [nzTwotoneColor]="'Gene' | entityColor"
-          nzType="civic-gene"></i>
+          [nzTwotoneColor]="'Feature' | entityColor"
+          nzType="civic-feature"></i>
         {{ feature.featureInstance.__typename }} - {{ feature.name }}
       </ng-template>
 
