--- a/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
+++ b/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
@@ -73,8 +73,8 @@
             <i
               nz-icon
               nzTheme="twotone"
-              [nzTwotoneColor]="'Gene' | entityColor"
-              nzType="civic-gene"></i>
+              [nzTwotoneColor]="'Feature' | entityColor"
+              nzType="civic-feature"></i>
           </ng-template>
         </a>
       </nz-col>
@@ -199,7 +199,7 @@
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="label() + ' Genes'"
+          [nzTitle]="label() + ' Features'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
