--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -82,7 +82,7 @@
             nzMatchRouter>
             <i
               nz-icon
-              nzType="civic-gene"></i>
+              nzType="civic-feature"></i>
             <span> <a routerLink="/features">Features</a> </span>
           </li>
 
