--- a/client/src/app/components/features/feature-tag/feature-tag.component.html
+++ b/client/src/app/components/features/feature-tag/feature-tag.component.html
@@ -29,9 +29,9 @@
     [entityColor]="iconColor">
     <i
       nz-icon
-      nzType="civic-gene"
+      nzType="civic-feature"
       nzTheme="twotone"
-      [nzTwotoneColor]="'Gene' | entityColor"></i>
+      [nzTwotoneColor]="'Feature' | entityColor"></i>
   </cvc-icon-badges>
   <!-- gene name length mean: 8; mode: 12 (15306); max: 25 -->
   <ng-container *ngIf="this.truncateLongName; else fullName">
