--- a/client/src/app/views/features/features-detail/features-detail.view.html
+++ b/client/src/app/views/features/features-detail/features-detail.view.html
@@ -12,8 +12,8 @@
         <i
           nz-icon
           nzTheme="twotone"
-          [nzTwotoneColor]="'Gene' | entityColor"
-          nzType="civic-gene"></i>
+          [nzTwotoneColor]="'Feature' | entityColor"
+          nzType="civic-feature"></i>
         {{ feature.featureInstance.__typename }} - {{ feature.name }}
       </nz-page-header-title>
 
