--- a/client/src/app/views/features/features-revise/features-revise.view.html
+++ b/client/src/app/views/features/features-revise/features-revise.view.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="feature$ | async as feature">
-  <cvc-section-navigation [displayName]="feature.name"> </cvc-section-navigation>
+  <cvc-section-navigation [displayName]="feature.name">
+  </cvc-section-navigation>
 
   <nz-page-header class="site-page-header">
     <!-- title -->
@@ -8,8 +9,8 @@
       <i
         nz-icon
         nzTheme="twotone"
-        [nzTwotoneColor]="'Gene' | entityColor"
-        nzType="civic-gene"></i>
+        [nzTwotoneColor]="'Feature' | entityColor"
+        nzType="civic-feature"></i>
       {{ feature.name }}
     </nz-page-header-title>
 
