use combined feature-variant tag where needed

--- a/client/src/app/components/comments/comment-body/comment-body.component.html
+++ b/client/src/app/components/comments/comment-body/comment-body.component.html
@@ -33,13 +33,14 @@
           }"></cvc-feature-tag>
       </span>
       <span *ngSwitchCase="'VARIANT'">
-        <cvc-variant-tag
+        <cvc-feature-variant-tag
           [variant]="{
             id: c.entityId,
             name: c.displayName,
             link: c.link,
-            deprecated: c.deprecated
-          }"></cvc-variant-tag>
+            deprecated: c.deprecated,
+            feature: c.feature
+          }"></cvc-feature-variant-tag>
       </span>
       <span *ngSwitchCase="'VARIANT_GROUP'">
         <cvc-variant-group-tag
