--- a/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
+++ b/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
@@ -75,9 +75,9 @@
       <cvc-evidence-tag
         *ngSwitchCase="'EvidenceItem'"
         [evidence]="subject"></cvc-evidence-tag>
-      <cvc-variant-tag
+      <cvc-feature-variant-tag
         *ngSwitchCase="'Variant'"
-        [variant]="subject"></cvc-variant-tag>
+        [variant]="subject"></cvc-feature-variant-tag>
       <cvc-revision-tag
         *ngSwitchCase="'Revision'"
         [revision]="$any(subject)"></cvc-revision-tag>
