--- a/client/src/app/components/flags/flag-popover/flag-popover.component.html
+++ b/client/src/app/components/flags/flag-popover/flag-popover.component.html
@@ -35,10 +35,10 @@
             *ngSwitchCase="'EvidenceItem'"
             [enablePopover]="false"
             [evidence]="f.flaggable"></cvc-evidence-tag>
-          <cvc-variant-tag
+          <cvc-feature-variant-tag
             *ngSwitchCase="'Variant'"
             [enablePopover]="false"
-            [variant]="f.flaggable"></cvc-variant-tag>
+            [variant]="f.flaggable"></cvc-feature-variant-tag>
           <cvc-variant-group-tag
             *ngSwitchCase="'VariantGroup'"
             [enablePopover]="false"
