--- a/client/src/app/components/revisions/revision-popover/revision-popover.component.html
+++ b/client/src/app/components/revisions/revision-popover/revision-popover.component.html
@@ -35,10 +35,10 @@
             *ngSwitchCase="'EvidenceItem'"
             [enablePopover]="false"
             [evidence]="r.subject"></cvc-evidence-tag>
-          <cvc-variant-tag
+          <cvc-feature-variant-tag
             *ngSwitchCase="'Variant'"
             [enablePopover]="false"
-            [variant]="r.subject"></cvc-variant-tag>
+            [variant]="r.subject"></cvc-feature-variant-tag>
           <cvc-variant-group-tag
             *ngSwitchCase="'VariantGroup'"
             [enablePopover]="false"
