display feature/variant tags and allow searching over both in the browse table view

--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
@@ -3,7 +3,7 @@
     *ngFor="let tag of displayedTags"
     [ngClass]="{
       'matched-tag':
-        matchingText && tag.name.toLowerCase().includes(matchingText)
+        matchingText && tag.matchText!.toLowerCase().includes(matchingText)
     }">
     <ng-container
       [ngTemplateOutlet]="tagTemplate"
@@ -31,7 +31,8 @@
           *ngFor="let tag of hiddenTags"
           [ngClass]="{
             'matched-tag':
-              matchingText && tag.name.toLowerCase().includes(matchingText)
+              matchingText &&
+              tag.matchText!.toLowerCase().includes(matchingText)
           }">
           <ng-container [ngSwitch]="tagType">
             <ng-container
@@ -73,6 +74,11 @@
     </ng-container>
     <ng-container *ngSwitchCase="'variant-type'">
       <cvc-variant-type-tag [variantType]="tag"></cvc-variant-type-tag>
+    </ng-container>
+    <ng-container *ngSwitchCase="'variant-feature'">
+      <cvc-feature-variant-tag
+        [truncateLongName]="true"
+        [variant]="tag"></cvc-feature-variant-tag>
     </ng-container>
   </ng-container>
 </ng-template>
